# learn-flask-mongodb-app

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  apprunner.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
application/: helpers.py  routes.py  schemas.py
aws/: apprunner-instance-role-policy.example.json  apprunner-source-service.example.json
docs/: api.md  apprunner.md  architecture.md  setup.md  testing.md
mongo-init/: 001-items.js
tests/: test_api.py
